# python

./: alg_ev.py  alg_ev_2.py  endless.py  first_graf.py  fractal.py  gausss.py  module.py  prostota.py  rabin_test.py  raceta.py  smth_strange.txt  taylor_fixed.ipynb  taylor_graph.ipynb  test_file.py
NIICHAVO/: abbr.html  history.html  index.html  people.html  sample_app.py
NIICHAVO/img/: Thumbs.db
NIICHAVO/static/: abbr.html  departments.html  history.html  people.html
NIICHAVO/templates/: index.html  surprise.html
comp/: gaus.c  gaus.py  gaus.pyx  gaus_test.py
comp/gauspkg/: requirements.txt  setup.cfg  setup.py
comp/gauspkg/src/gaus/: gaus.c  gaus.pyx
comp/hellopkg/: setup.cfg  setup.py
comp/hellopkg/src/hello/: hello.c
kolmog/: .~lock.source_file.csv#  check.py  source_file.csv
