[metadata]
name = gaus
version = 0.0.1
description = hello function 
classifiers = 
	Operating System :: OS Independent
	Programming Language :: C
	Programming Language :: Cython
	Programming Language :: Python :: 3.10
	Programming Language :: Python :: Implementation :: CPython

[options]
zip_safe = False
python_requires = >=3.10
package_dir = =src
packages = find:

[options.packages.find]
where = src
